PC2-PRE-1 Terminado

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /S3/Programacion3/TP3-JPA1/target/
+/S3/Programacion3/TP7-JSP/JSP/target/
+/S3/Programacion3/TP7-JSP2/JavaServerPage/target/
+/S3/Programacion3/TP7-JSP/target/
+/S3/Programacion3/TP7-JSP/NetBeansJSP/target/
+/S3/Programacion3/PC2-PRE-1/Ejercicio 2 - JSP/JSP/target/
