--- a/S3/Programacion3/PC2-PRE-1/Ejercicio 3 - REST/Backend/src/main/resources/application.properties
+++ b/S3/Programacion3/PC2-PRE-1/Ejercicio 3 - REST/Backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=4000
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/productos
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
